# python-behave

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql-analysis.yml  run_tox.yml
calculator/: __init__.py  __main__.py  calculator.py
features/: environment.py  uri1001_domain.feature  uri1001_system.feature
features/steps/: commom_steps.py  system_behavior.py  uri1001_domain.py  uri1001_system.py
